# lighteval-evaluation

./: README.md  pyproject.toml
data/: test.csv
data/custom_dataset/: train.jsonl
src/: evaluation.py
src/tasks/: __init__.py  custom_task.py
